fixed layout bugs

--- a/biosite.css
+++ b/biosite.css
@@ -187,6 +187,12 @@ a:active {
     font-size: larger;
 }
 
+.about-card-text{
+    color: rgb(54, 54, 54);
+    margin-right: 30px;
+    padding-bottom: 20px;
+    font-size: medium;
+}
 
 
 .card-image {
